--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,15 @@ repository               : "anirban-plabon/anirban-plabon.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "anibmdpi.png"
+  name             : "Anirban Barai
   pronouns         : # example: "she/her"  
-  bio              : "CSE RUET || Machine Learning Enthusiast || Flutter Developer"
+  bio              : "Machine Learning Enthusiast"
   location         : "Gazipur, Barishal, Bangladesh"
   employer         : "Rajshahi University of Engineering & Technology"
   uri              : # URL
   email            : "anirbanplabon@gmail.com" 
+  Contact No       : +880 1732 897 664
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
